<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserActivity">

    <TextView
        android:id="@+id/tvIdentifyUrSelf"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="monospace"
        android:layout_marginTop="30dp"
        android:padding="30dp"
        android:text="@string/questionUser"
        android:textAlignment="center"
        android:textColor="@color/blue_agutiniana"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDescription1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:fontFamily="monospace"
            android:text="@string/studentName"
            android:textAlignment="center"
            android:textColor="@color/blue_agutiniana"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etxUserName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:hint="@string/usersName"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:textSize="17sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDescription2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:fontFamily="monospace"
            android:text="@string/studenCode"
            android:textAlignment="center"
            android:textColor="@color/blue_agutiniana"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etxUserCode"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:fontFamily="monospace"
            android:hint="@string/usersStudentCode"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:textSize="17sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/btnConsult"
        android:layout_width="220dp"
        android:layout_height="115dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_blue"
        android:fontFamily="monospace"
        android:text="@string/look4grades"
        android:textColor="@color/golden_agutiniana"
        android:textStyle="bold"
        android:textSize="19sp"/>


</LinearLayout>