<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userDataActiviy">

    <TextView
        android:id="@+id/tvIdentifyUrSelf"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:layout_marginTop="30dp"
        android:padding="30dp"
        android:text="@string/questionUser"
        android:textAlignment="center"
        android:textColor="@color/blue_agutiniana"
        android:textSize="25sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tvDescription1R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvIdentifyUrSelf"
        android:layout_alignStart="@+id/etxUserNameReceive"
        android:layout_marginStart="0dp"
        android:layout_marginTop="27dp"
        android:fontFamily="monospace"
        android:text="@string/studentName"
        android:textAlignment="center"
        android:textColor="@color/blue_agutiniana"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
            android:id="@+id/etxUserNameReceive"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDescription1R"
            android:layout_centerHorizontal="true"
            android:fontFamily="monospace"
            android:hint="@string/usersName"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:textSize="17sp"
            tools:ignore="SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/tvDescription2R"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxUserNameReceive"
            android:layout_alignStart="@+id/etxUserCodeReceive"
            android:layout_marginTop="30dp"
            android:fontFamily="monospace"
            android:text="@string/studenCode"
            android:textAlignment="center"
            android:textColor="@color/blue_agutiniana"
            android:textSize="18sp"
            android:textStyle="bold" />

    <EditText
        android:id="@+id/etxUserCodeReceive"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDescription2R"
        android:layout_centerHorizontal="true"

        android:fontFamily="monospace"
        android:hint="@string/usersStudentCode"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:textSize="17sp"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvGrade1R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etxUserCodeReceive"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:fontFamily="monospace"
        android:text="@string/finalGrade"
        android:textAlignment="center"
        android:textColor="@color/blue_agutiniana"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/etxGradeReceived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGrade1R"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:hint="@string/finalGrade"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:textSize="17sp"
        android:textAlignment="center"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="220dp"
        android:layout_height="115dp"
        android:layout_below="@+id/etxGradeReceived"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:background="@drawable/bg_blue"
        android:fontFamily="monospace"
        android:text="@string/goBack"
        android:textColor="@color/golden_agutiniana"
        android:textSize="19sp"
        android:textStyle="bold" />


</RelativeLayout>